# waterman

./: Cargo.toml  LICENSE.txt  README.md  flake.nix
src/: board.rs  main.rs
src/avrdude/: avrdude-6.conf
