[package]
name = "waterman"
version = "0.1.1"
authors = ["Sreeraj V Rajesh <cyberkutti@gmail.com>"]
edition = "2021"
description = "A CLI tool to easily flash code onto AVR microcontrollers using avrdude, enhancing the development workflow for embedded Rust projects."
readme = "README.md"
repository = "https://github.com/cyberkutti-iedc/waterman"
license = "MIT"
license-file = "LICENSE.txt"
documentation = "https://docs.rs/waterman"
homepage = "https://github.com/cyberkutti-iedc/waterman"
keywords = ["avr", "arduino", "avrdude", "waterman"]
categories = ["embedded", "hardware-support", "development-tools"]

# Optional metadata for improved discoverability
description-long = """
WaterMan is a command-line tool designed to make the flashing of code onto AVR microcontrollers
simple and efficient. It wraps around `avrdude` and adds useful functionality for AVR development,
particularly for use with the Niti dev board and similar Arduino-compatible devices.
"""
exclude = [".gitignore", "tests/*", "examples/*"]
version-requirements = ">=1.0.0"


[dependencies]
colored = "2.0.0"
tempfile = "3.2.0"
serialport = "4.0.0"
anyhow = "1.0.38"
git-version = "0.3.4"
ctrlc = "3.2.1"

[dependencies.structopt]
version = "0.3.21"
default-features = false
features = ["color"]
